# windex

./: Cargo.toml  LICENSE-MIT  README.md  bluss_indexing.md
src/: container.rs  impl.rs  index.rs  lib.rs  proof.rs  traits.rs  utf8.rs
src/index/: index.rs  mod.rs  range.rs
src/particle/: mod.rs
src/particle/perfect/: index.rs  mod.rs  range.rs
src/particle/simple/: index.rs  mod.rs  range.rs
tests/: general_tests.rs  index.rs  ui.rs
tests/ui/: Container__into_untrusted.rs  Container__into_untrusted.stderr  basic_branding.rs  basic_branding.stderr  basic_branding2.rs  basic_branding2.stderr  join_proof_add.rs  join_proof_add.stderr
