[package]
name = "windex"
version = "0.2.0"
edition = "2018"

authors = [
    "Christopher Durham (CAD97) <cad97@cad97.com>",
]
description = "Wonderful sound unchecked indexing using lifetime generativity"
repository = "https://github.com/CAD97/windex"
readme = "./README.md"
keywords = ["data-structure", "generativity", "no_std", "indexing"]
categories = ["no-std", "rust-patterns"]
license = "MIT OR Apache-2.0"

[lib]
name = "windex"

[dependencies]
generativity = "1.0.0"
new_debug_unreachable = "1.0.3"

[features]
doc = [] # opt in to #[doc(cfg(...))] and intra-doc link imports

[dev-dependencies]
trybuild = "1.0.4"

[package.metadata.docs.rs]
all-features = true
